# gloo-transforms-html

./: .gitignore  BUILD.bazel  Makefile  Makefile.conf.sample  README.md  WORKSPACE  go.mod  go.sum
api/: BUILD.bazel  service.proto
k8s/: service.yaml  virtualservice.yaml
src/: main.go
templates/: modern-template.html  simple-template.html
tooling/bazel/: BUILD.bazel  dependencies.bzl
tooling/bazel/private/: BUILD.bazel  repositories.bzl
tooling/docker/: Dockerfile.sandbox  registry.config.json.sample
