filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + [
        "//tooling/bazel/private:all_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]) + ["//tooling/bazel/private:all_rules"],
    visibility = ["//visibility:public"],
)
